--- a/arch/arm64/configs/cyanogenmod_zeroltexx_defconfig
+++ b/arch/arm64/configs/cyanogenmod_zeroltexx_defconfig
@@ -2700,7 +2700,7 @@ CONFIG_EXYNOS_DECON_MDNIE_LITE=y
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 CONFIG_EXYNOS_DECON_LCD_MCD=y
 CONFIG_LCD_HMT=y
-# CONFIG_LCD_ALPM is not set
+CONFIG_LCD_ALPM=y
 # CONFIG_LCD_BURNIN_CORRECTION is not set
 CONFIG_LCD_HBM_INTERPOLATION=y
 CONFIG_PANEL_AID_DIMMING=y
@@ -2708,9 +2708,8 @@ CONFIG_PANEL_AID_DIMMING=y
 # CONFIG_EXYNOS_DECON_LCD_S6E3HA2K is not set
 # CONFIG_EXYNOS_DECON_LCD_S6E3HF2 is not set
 # CONFIG_EXYNOS_DECON_LCD_S6E3HF2_WQHD is not set
-# CONFIG_PANEL_S6E3HF2_DYNAMIC is not set
-CONFIG_PANEL_S6E3HF4_WQHD=y
-CONFIG_PANEL_DUALIZATION=y
+CONFIG_PANEL_S6E3HF2_DYNAMIC=y
+# CONFIG_PANEL_S6E3HA2_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HA3_DYNAMIC is not set
 # CONFIG_PANEL_S6E3HF3_DYNAMIC is not set
 # CONFIG_EXYNOS_DECON_LCD_S6E3FA0 is not set
@@ -3875,7 +3874,7 @@ CONFIG_SAMSUNG_LPM_MODE=y
 # CONFIG_WIRELESS_CHARGER_THM is not set
 # CONFIG_EN_OOPS is not set
 CONFIG_DISABLE_SAVE_CAPACITY_MAX=y
-# CONFIG_FIX_CHG_FQ_4MHZ is not set
+CONFIG_FIX_CHG_FQ_4MHZ=y
 # CONFIG_STORE_MODE is not set
 # CONFIG_RESET_CONTROLLER is not set
 CONFIG_SENSORS_SSP=y
